--- a/Styles.css
+++ b/Styles.css
@@ -4,31 +4,81 @@
     color: whitesmoke;
  }
 
+ -----ELEMENTO------
  section{
     background: green
  }
 
+--------ID--------
  #pri{
     background: black;
     color: red;
  }
 
+ ------CLASE-------
  .grey{
     background: grey
  }
 
+ ------PROPIEDAD------
  blockquote[cite]{
     background:black;
- }*/
+ }
+ 
+ 
+ ------AGRUPAR ELEMENTOS-----------
+header,section,footer,aside,nav,article{
+   border:1px solid black;
+}
+ */
 
 
  h1{
-    font-size: 70px;
+    font-size: 80px;
     /*FUENTE*/font-family: Arial, Helvetica, sans-serif;
     /*GROSOR*/font-weight: bold;
+    font-style: italic;
  }
 
  h2{
-    font: lighter 45px sans-serif;
+    font: bold 55px sans-serif;
  }  
 
+ h3{
+   font-size: 37px;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-weight: lighter;
+ }
+
+.contenido{
+   background:grey;
+ }
+
+ img{
+   height: 300px;
+   width: 400px;
+ }
+
+ #footfinal{
+    background:green;
+ }
+
+ nav,section,footer{
+border: 2px solid black;
+ }
+
+
+ div{
+    background:grey;
+    width: 1300px;
+    /*margin: 20px auto*/
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
+    padding: 10px;
+ }
+
+ .navegacion{
+      align-content: centerS;
+ }
